✏️ Prevent ber spua from breaking separately

--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -34,8 +34,8 @@ const { title } = Astro.props;
             <hr>
             <footer>
                 If you have any questions, head over to the
-                <a href="https://discord.gg/FChFEHEet8">ber spua</a> Discord
-                server. We'd love to see you there 😊
+                <a href="https://discord.gg/FChFEHEet8">ber&nbsp;spua</a>
+                Discord server. We'd love to see you there 😊
             </footer>
         </div>
     </body>
