--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,6 +2,6 @@
 import SiteLayout from "../layouts/SiteLayout.astro";
 ---
 
-<SiteLayout title="404 Not Found">
+<SiteLayout chapter={-1} title="404 Not Found">
     <a href="/">Back home</a>
 </SiteLayout>
