--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -89,7 +89,7 @@ const docTitle = (() => {
     </body>
 </html>
 <script is:inline>
-    // Inlined code to stop Flash Of Unstyled Content
+    // Inlined code to stop Flash Of Unstyled Content.
 
     function checkBrowserPrefersDark() {
         const browserPrefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
@@ -124,8 +124,8 @@ const docTitle = (() => {
     document.getElementById("chapterNavToggle")?.addEventListener("click", handleToggleChapterNav);
 
     /*
-      Reveal topBar on scroll-up
-      Hide topBar on scroll-down
+      Reveal topBar on scroll-up.
+      Hide topBar on scroll-down.
     */
    
     let lastScrollHeight = 0;
