--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -43,12 +43,12 @@ const docTitle = (() => {
         <title>{docTitle}</title>
         <meta name="author" content="The ber spua Discord Server">
         <meta name="description" content="A free and open-source book for studying the constructed language Eberban">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="icon" href="/favicon.svg">
+        <link rel="apple-touch-icon" sizes="180x180" href="/logo/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/logo/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/logo/favicon-16x16.png">
+        <link rel="icon" href="/logo/favicon.svg">
         <link rel="manifest" href="/site.webmanifest">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="mask-icon" href="/logo/safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#2b5797">
         <meta name="theme-color" content="#ffffff">
     </head>
@@ -62,7 +62,7 @@ const docTitle = (() => {
                     </svg>
                 </button>
                 <span class="h-full text-2xl hidden sm:block">{siteName}</span>
-                <img class="h-full sm:hidden" src="/favicon.svg" />
+                <img class="h-full sm:hidden" src="/logo/favicon.svg" />
                 <button id="themeToggle" class="h-full text-xl md:text-2xl">🌛</button>
             </div>
             <div class="overflow-y-auto">
