--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -77,4 +77,20 @@
     p {
         @apply leading-relaxed;
     }
+
+    table {
+        @apply w-full my-8;
+        @apply border-collapse;
+    }
+
+    table, td, th {
+        @apply border-2 border-solid border-gray-200;
+        @apply dark:border-gray-800;
+    }
+
+    tbody tr:nth-child(odd) td,
+    tbody tr:nth-child(odd) th {
+        @apply bg-gray-100;
+        @apply dark:bg-gray-900;
+    }
 }
