📝 Add A Little Logic Section
I was drafting up future sections and realised that there was so much
jargon I needed to explain. So I dedicated this chapter to all of that.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,6 +74,14 @@
         @apply list-decimal;
     }
 
+    li p {
+        /* 
+          Using italics in a markdown-generated list item surrounds it with <p>
+          which is block. 
+        */
+        @apply inline;
+    }
+
     p {
         @apply leading-relaxed;
     }
