🚚 Move slugify.ts to utils/

--- a/src/components/ChapterNav.astro
+++ b/src/components/ChapterNav.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from "astro:content";
-import slugify from "../slugify";
+import slugify from "../utils/slugify";
 const chapterEntries = await getCollection("chapters");
 
 interface Props { activeChapter: number };
