--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -2,7 +2,7 @@
 import "@fontsource/bitter";
 import { getCollection } from "astro:content";
 import ChapterNav from "../components/ChapterNav.astro";
-import slugify from "../slugify";
+import slugify from "../utils/slugify";
 import "../styles/global.css";
 
 interface Props {
