--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,6 +53,10 @@ div.react-flow__pane, div.react-flow__node, div.react-flow__node:focus {
         @apply text-xl md:text-2xl mt-8;
     }
 
+    h3 {
+        @apply text-lg md:text-xl mt-6;
+    }
+
     hr {
         @apply h-1 bg-gray-200 border-0 mt-8;
         @apply dark:bg-gray-700;
@@ -79,6 +83,14 @@ div.react-flow__pane, div.react-flow__node, div.react-flow__node:focus {
         @apply list-decimal;
     }
 
+    ol ol {
+        @apply indent-4;
+    }
+
+    ol ol li {
+        @apply [list-style-type:lower-alpha] mb-1;
+    }
+    
     li p {
         /* 
           Using italics in a markdown-generated list item surrounds it with <p>
@@ -89,6 +101,10 @@ div.react-flow__pane, div.react-flow__node, div.react-flow__node:focus {
 
     p {
         @apply leading-relaxed;
+    }
+
+    p img {
+        @apply mx-auto;
     }
 
     table {
