📝 Add A Little Logic Chapter
➕ Add katex

✨ Add Latex component

📝 Add A Little Logic Section

  I was drafting up future sections and realised that there was so much
  jargon I needed to explain. So I dedicated this chapter to all of that.

💄 Add padding to table cells

💄 Change Info dark-mode text to white

  I found it weird that the dark-mode text was black when every other
  dark-mode text was white. So I changed it to white and made the white
  text easier to see.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,6 +74,14 @@
         @apply list-decimal;
     }
 
+    li p {
+        /* 
+          Using italics in a markdown-generated list item surrounds it with <p>
+          which is block. 
+        */
+        @apply inline;
+    }
+
     p {
         @apply leading-relaxed;
     }
@@ -86,6 +94,14 @@
     table, td, th {
         @apply border-2 border-solid border-gray-200;
         @apply dark:border-gray-800;
+    }
+
+    td, th {
+        @apply px-2;
+    }
+
+    th {
+        @apply py-1;
     }
 
     tbody tr:nth-child(odd) td,
