📱 Add &nbsp; to links and fix latex linebreaks

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,5 +3,5 @@ import SiteLayout from "../layouts/SiteLayout.astro";
 ---
 
 <SiteLayout chapter={-1} title="404 Not Found">
-    <a href="/">Back home</a>
+    <a href="/">Back&nbsp;home</a>
 </SiteLayout>
