📝 Add Reading The Dictionary chapter
I placed this as chapter 5 as a break before we move onto
(what is likely to be) chaining.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,6 +57,10 @@ div.react-flow__pane, div.react-flow__node, div.react-flow__node:focus {
         @apply text-lg md:text-xl mt-6;
     }
 
+    li h3 {
+        @apply inline; /* Specifically for 05_reading_the_dictionary.mdx*/
+    }
+
     hr {
         @apply h-1 bg-gray-200 border-0 mt-8;
         @apply dark:bg-gray-700;
