--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -1,6 +1,6 @@
 ---
 import "@fontsource/bitter";
-import '@fontsource/fira-mono';
+import '@fontsource/league-mono';
 import { getCollection } from "astro:content";
 import ChapterNav from "../components/ChapterNav.astro";
 import slugify from "../utils/slugify";
